2010-08-06  Elliott Baron  <ebaron@fedoraproject.org>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/RemoteLaunchStep.java (RemoteLaunchStep): Store name. 
	(toString): Use launch step name.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteLaunchDelegate.java (launch): Reset process to null, since delegate
	can be reused by caller.
	(disconnect): Actually disconnect if channel is not closed.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteLaunchTabGroup.java (getProfileTabs): Arguments
	Working Directory problem has been fixed in superclass.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteTab.java (refreshPeerViewer): Ensure content provider is set.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindTCFInputStream.java (.doneRead): Added FIXME: Problems with losing data.

2010-08-03  Elliott Baron  <ebaron@fedoraproject.org>

	* icons/tcf.gif: New file.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteTab.java: New file.
	* META-INF/MANIFEST.MF: New dep.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/Messages.java: New keys. 
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/messages.properties: Likewise.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/RemoteLaunchConstants.java: New constants.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/RemoteLaunchStep.java: Added debugging code. 
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteCommand.java: Disconnect stdin on exit.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteLaunchDelegate.java: Refactoring, improvements
	to cleanup.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/ValgrindRemoteLaunchTabGroup.java (getProfileTabs): Don't check version.