@@ -14,7 +14,6 @@ Import-Package: org.eclipse.cdt.core,
  org.eclipse.cdt.core.model,
  org.eclipse.cdt.debug.core,
  org.eclipse.cdt.launch,
- org.eclipse.cdt.launch.remote,
  org.eclipse.cdt.launch.ui,
  org.eclipse.core.filesystem,
  org.eclipse.core.resources,
