@@ -1,3 +1,7 @@
+2010-08-11  Elliott Baron  <ebaron@fedoraproject.org>
+
+	* META-INF/MANIFEST.MF: Removed unnecessary dependency.
+
 2010-08-06  Elliott Baron  <ebaron@fedoraproject.org>
 
 	* src/org/eclipse/linuxtools/internal/valgrind/launch/remote/RemoteLaunchStep.java (RemoteLaunchStep): Store name. 
